targets/srv0/k3s/seerr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`seerr.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: seerr
          port: 80
  tls:
    secretName: seerr-prod-tls
